Avoid overlap

--- a/src/app/views/others/app-cuscinetti/app-cuscinetti.component.scss
+++ b/src/app/views/others/app-cuscinetti/app-cuscinetti.component.scss
@@ -82,14 +82,14 @@
 {
     position: absolute;
     top: 19vh;
-    right: 48vw;
+    right: 46.5vw;
 }
 
 .ngx-gauge:nth-child(4)
 {
     position: absolute;
     top: 19vh;
-    right: 36vw;
+    right: 35.5vw;
 }
 
 .ngx-gauge:nth-child(5)
@@ -125,14 +125,14 @@
 {
     position: absolute;
     top: 57vh;
-    right: 48vw;
+    right: 46.5vw;
 }
 
 .ngx-gauge-2:nth-child(4)
 {
     position: absolute;
     top: 57vh;
-    right: 36vw;
+    right: 35.5vw;
 }
 
 .ngx-gauge-2:nth-child(5)
